# ddos-detection-simulation

./: CMakeLists.txt  README.md  build.bat  imgui.ini  security_report.txt
include/core/: Enums.h  Packet.h  TrafficWindow.h
include/detection/: EntropyDetector.h  IDetector.h  RateLimitDetector.h  ThresholdDetector.h
include/logging/: Logger.h
include/network/: AttackerNode.h  ClientNode.h  NetworkNode.h  ServerNode.h
include/security/: Firewall.h
include/simulation/: NetworkSimulator.h
include/ui/: Dashboard.h
installer/: setup.iss
src/: main.cpp
src/core/: Packet.cpp  TrafficWindow.cpp
src/detection/: EntropyDetector.cpp  RateLimitDetector.cpp  ThresholdDetector.cpp
src/logging/: Logger.cpp
src/network/: AttackerNode.cpp  ClientNode.cpp  ServerNode.cpp
src/security/: Firewall.cpp
src/simulation/: NetworkSimulator.cpp
src/ui/: Dashboard.cpp
